# torchft

./: .gitignore  .pyre_configuration  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  pyproject.toml  train.py  train_ddp.py
.pyre/: pyre.stderr
proto/: torchft.proto
python/: __init__.py  checkpointing.py  manager.py
scripts/: lint.sh  publish.sh  test.sh
src/: coordinator.rs  lib.rs  lighthouse.rs  main.rs  manager.rs
torchft/: __init__.py  checkpointing.py  checkpointing_test.py  data.py  data_test.py  ddp.py  ddp_test.py  manager.py  manager_test.py  optim.py  optim_test.py  parameter_server.py  parameter_server_test.py  process_group.py  process_group_test.py
