[package]
name = "torchft"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
log = "0.4.22"
prost = "0.13.3"
protobuf = "2.28.0"
pyo3 = {version="0.22.3", features = ["extension-module"]}
raft = {version="0.7.0"}#, features = ["prost-codec"], default-features = false}
raft-proto = {version="0.7.0"}#, features=["prost-codec"], default-features = false}
slog = "2.7.0"
slog-stdlog = "4.1.1"
stderrlog = "0.6.0"
structopt = "0.3.26"
tokio = {version = "1.40.0", features = ["full", "test-util", "tracing", "macros", "rt-multi-thread"] }
tonic = "0.12.2"

[build-dependencies]
tonic-build = "0.12.2"
